logs/drift_src_mnist_m_model_DigitsDGCNN_policy_1_setting_60_schedule_sine_wave_domain_change_0_seed_2_imgsize_32_20250520_203427.log
  File "/home/apiasecz/programming/concept_drift_optimal_adaptation_FL/src/execute_DigitsDG/evaluate_policy_DigitsDG.py", line 437
    elif self.schedule_type == "decaying_spikes":
    ^^^^
SyntaxError: invalid syntax
